--- a/style.css
+++ b/style.css
@@ -2,4 +2,331 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+  
+ }
+html, body {
+  overflow-x: hidden;
 }
+body {
+  position: relative;
+}
+
+ /*
+nav section */
+a.brand-design{
+    font-size: 2.5rem;
+    color:red;
+    font-family: 'Dancing Script', cursive;
+}
+.nav-item-design{
+    color: rgb(7,7,78);
+    padding: 35px;
+    font-weight: 500;
+}
+a.navlink-design{
+    color: rgb(10,10,94);
+}
+a.navlink-design:hover{
+    color:red;
+    transition: 0.3s;
+}
+.btn0{
+    width:150px;
+    height:50px;
+    border:none;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.3s;
+    background-color: rgb(248,83,83);
+}
+.btn0:hover{
+    background-color: rgb(214,11,11);
+    transition: all 0.3s;
+}
+.btn1{
+    width:150px;
+    height:50px;
+    background-color: transparent;
+    border:2px solid rgb(214,11,11);
+    outline: none;
+    cursor: pointer;
+    color: rgb(214,11,11);
+}
+.btn1:hover{
+    background-color: rgb(248,83,83);
+    outline: none;
+    border: none;
+    transition: all 0.3s;
+    color: white;
+}
+/* main section */
+.main{
+    background: url(imgs/main1copy.jpg) no-repeat;
+    width: 100%;
+    /* height: 95vh; */
+    background-size: cover;
+}
+.main h1{
+    font-size: 5rem;
+    font-weight: 800;
+    color: rgb(7,7,78);
+}
+.main input{
+    border:none;
+    height:70px;
+    width: 75%;
+    outline: none;
+    padding: 15px;
+}
+.btn2{
+    height: 70px;
+    width: 20%;
+    color: white;
+    outline: none;
+    border: none;
+    background-color: rgb(248,83,83);
+    margin-left: -5px;
+}
+.btn2:hover{
+    background-color: rgb(214,11,11);
+    outline: none;
+    border: none;
+    transition: all 0.3s;
+    color: white;
+}
+/* ceta-section */
+.ceta-tittle{
+    color: red;
+    text-transform: uppercase;
+}
+.ceta .container h1{
+    font-size: 3.5rem;
+    color: rgb(7,7,7);
+}
+.ceta .card:hover{
+    color:red;
+    cursor: pointer;
+    transition: all 0.3s;
+    box-shadow: -3px 3px 23px -12px rgba(0,0,0,0.74);
+    -webkit-box-shadow: -3px 3px 23px -12px rgba(0,0,0,0.74);
+    -moz-box-shadow: -3px 3px 23px -12px rgba(0,0,0,0.74);
+}
+.btn3{
+    height: 71px;
+    width:71%;
+    background: transparent;
+    border: 2px solid rgb(130,130,321);
+    cursor: pointer;
+    border-radius: 5x;
+    transition: all 0.3s;
+}
+.btn3:hover{
+    background: rgb(130,130,321);
+    color: white;
+    outline: none;
+    border: none;
+    transition: all 0.3s;
+}
+/* .resume section */
+.resume{
+    background:linear-gradient(rgba(63, 107, 250, 0.18),rgba(63, 107, 250, 0.18)), url(imgs/woman.jpg);
+    width: 100%;
+    /* height: 85vh; */
+    background-size: cover;
+}
+.resume h1{
+    font-size: 4.5rem;
+}
+/* work section */
+.work h1{
+    font-size: 4.0rem;
+    color: rgb(7,7,78);
+}
+.btn4{
+    font-size: 1.5rem;
+    height: 70px;
+    width: 40%;
+    color: white;
+    outline: none;
+    border: none;
+    background-color: rgb(248,83,83);
+    margin-top: 50px;
+    transition: all 0.3s;
+}
+.btn4:hover{
+    background-color: rgb(214,11,11);
+    outline: none;
+    border: none;
+    transition: all 0.3s;
+    color: white;
+}
+/* apply section */
+.apply{
+    background: url(imgs/cool-background.png) no-repeat;
+    background-size: cover;
+    /* height: 100vh; */
+    width: 100%;
+}
+.apply .card{
+    background: rgba(4, 26, 100, 0.841);
+    color: white;
+}
+.apply h1{
+    color: white;
+    font-size: 5.5rem;
+}
+.circle{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background: white;
+    display: inline-block;
+}
+.circle img{
+    border-radius: 50%;
+}
+/* slider section */
+.avatar{
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+}
+.slider-p{
+font-size: 1.5rem;
+}
+.btn5{
+    font-size: 1.5rem;
+    height: 60px;
+    width: 30%;
+    color: white;
+    outline: none;
+    border: none;
+    background-color: rgb(248,83,83);
+    margin-top: 50px;
+    transition: all 0.3s;
+}
+.btn5:hover{
+    background-color: rgb(214,11,11);
+    outline: none;
+    border: none;
+    transition: all 0.3s;
+    color: white;
+}
+/* footer section */
+.footer{
+    background: #121626;
+    color: white;
+}
+.footer p{
+  margin: 0;
+  color:#69696b
+}
+.link{
+    color:#6b6b72;
+    transition: all 0.3s;
+}
+.link:hover{
+    color: #ff2962;
+    padding-left: 15px;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.footer input{
+    width: 70%;
+    height: 60px;
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    
+}
+.btn6{
+    width: 20%;
+    height: 60px;
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+    margin-left: -10px;
+    border: 1px solid #ff2962; ;
+    background: #ff2962;
+    color: white;
+
+}
+.fas{
+    font-size: 1.4rem;
+    
+}
+@media only screen and (max-width:576px) {
+    /* html,body{
+        margin:15px;
+        padding:5px;
+    }
+  .main{
+    background-size: 100% 100%;
+    background-position: center;
+    min-height: 100vh;
+  }
+  .resume{
+    background-size: 100% 100%;
+    background-position: center;
+    min-height: 100vh;
+  }
+  .resume h1{
+      font-size: 2.5rem;
+  } */
+   .main { 
+    background: url(imgs/main1copy.jpg) 85% 85% no-repeat scroll !important;
+    background-position:center;
+    background-size: cover;
+   
+}
+.resume{   
+    background: url(imgs/woman.jpg) 70% 0% no-repeat scroll !important;
+    background-position:center;
+    background-size: cover;
+    min-height: 100vh;
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+	.main { 
+        background: url(imgs/main1copy.jpg) 90% 90% no-repeat scroll !important;
+        background-position:center;
+        background-size: cover;
+    }
+    .resume{   
+            background: url(imgs/woman.jpg) 75% 0% no-repeat scroll !important;
+            background-position:center;
+            background-size: cover;
+            min-height: 100vh;
+            }
+    }
+    @media only screen and (min-width: 768px) and (max-width: 992px) {
+        .main { 
+            background: url(imgs/main1copy.jpg) 90% 0% no-repeat scroll !important;
+            background-position:center;
+            background-size: cover;
+        }
+        .resume{   
+                background: url(imgs/woman.jpg) 75% 0% no-repeat scroll !important;
+                background-position:center;
+                background-size: cover;
+                min-height: 100vh;
+                }
+        } 
+    @media only screen and (min-width: 993px) and (max-width: 1024px) {
+        .main { 
+            background: url(imgs/main1copy.jpg) 90% 0% no-repeat scroll !important;
+            background-position:center;
+            background-size: cover;
+        }
+        .resume{   
+                background: url(imgs/woman.jpg) 75% 0% no-repeat scroll !important;
+                background-position:center;
+                background-size: cover;
+                min-height: 100vh;
+                }
+        } 
